melhorias nos usuarios e eventos
